force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Override__c/fields/agf__Priority__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority__c</fullName>
    <label>Priority</label>
    <length>32</length>
    <type>Text</type>
</CustomField>