force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Override__c/fields/agf__Priority_Mapping__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority Mapping</label>
    <referenceTo>agf__ADM_Priority_Mapping__c</referenceTo>
    <relationshipLabel>Priority Overrides</relationshipLabel>
    <relationshipName>Priority_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>