force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Override__c/fields/agf__Priority_Override_Explanation__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Override_Explanation__c</fullName>
    <label>Priority Override Explanation</label>
    <type>TextArea</type>
</CustomField>