force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Override__c/fields/agf__Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Work__c</fullName>
    <label>Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Priority Overrides</relationshipLabel>
    <relationshipName>Priority_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>