force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Priority_Override__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>agf__Priority_Override_Explanation__c</columns>
    <columns>agf__Work__c</columns>
    <columns>agf__Priority__c</columns>
    <columns>agf__Priority_Default__c</columns>
    <columns>agf__Priority_Mapping__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>